<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/bg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitStart"
                android:src="@drawable/bg" />

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/bg"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/memilih"
                android:textColor="@android:color/white"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/desk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/judul"
                android:layout_marginTop="40dp"
                android:text="@string/desk"
                android:textColor="@android:color/background_light"
                android:textSize="16dp" />

            <Button
                android:id="@+id/pencet1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/desk"

                android:layout_marginTop="100dp"
                android:background="@android:color/white"
                android:elevation="@dimen/cardview_default_radius"
                android:text="@string/lets" />


        </RelativeLayout>

    </LinearLayout>

</ScrollView>