<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainMenu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/pp"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:id="@+id/menu"
                android:layout_alignParentRight="true"
                android:src="@drawable/menu"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/find"
                android:layout_centerInParent="true"
                android:layout_below="@+id/menu"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:layout_width="310dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/find"
                android:textColor="@color/black"
                android:textSize="30dp" />
            <SearchView
                android:id="@+id/search"
                android:layout_below="@+id/find"
                android:layout_marginTop="40dp"
                android:background="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_below="@+id/find"
                android:layout_marginTop="50dp"
                android:text="@string/search"
                android:textSize="20dp"
                android:layout_marginLeft="50dp"
                android:layout_width="match_parent"
                android:textColor="@color/search"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="45dp"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_below="@+id/find"
                android:src="@drawable/search" />
            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_below="@+id/search"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="13dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/pepaya"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pepaya"/>
                <TextView
                    android:id="@+id/textpepaya"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="80dp"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/pepaya"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp"
                android:layout_below="@+id/search"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="13dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:id="@+id/cabe"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cabe"/>
                <TextView
                    android:id="@+id/textcabe"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="80dp"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/cabe"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_below="@+id/card1"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="13dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/tomat"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tomat"/>
                <TextView
                    android:id="@+id/texttomat"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="80dp"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/tomat"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp"
                android:layout_below="@+id/card1"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="13dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:id="@+id/kacang"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kacang"/>
                <TextView
                    android:id="@+id/textkacang"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="80dp"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/kacang"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_below="@+id/card2"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="13dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/bayam"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bayam"/>
                <TextView
                    android:id="@+id/textbayam"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="80dp"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/bayam"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp"
                android:layout_below="@+id/card2"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="13dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:id="@+id/wortel"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/wortel"/>
                <TextView
                    android:id="@+id/textwortel"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="80dp"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/wortel"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_below="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/gambar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/sayuran"/>

                <TextView
                    android:layout_width="239dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:labelFor="@+id/gambar"
                    android:text="@string/quote"
                    android:textAlignment="center"
                    android:layout_marginLeft="10dp"/>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>